# ame

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.adoc  README.md  ame.hpp  ame_8hpp.html  ame_8hpp__incl.map  ame_8hpp__incl.md5  ame_8hpp_source.html  ame___ambisonics_8hpp.html  ame___ambisonics_8hpp.js  ame___ambisonics_8hpp__dep__incl.map  ame___ambisonics_8hpp__dep__incl.md5  ame___ambisonics_8hpp__incl.map  ame___ambisonics_8hpp__incl.md5  ame___ambisonics_8hpp_source.html  ame___audio_buffer_8hpp.html  ame___audio_buffer_8hpp__dep__incl.map  ame___audio_buffer_8hpp__dep__incl.md5  ame___audio_buffer_8hpp__incl.map  ame___audio_buffer_8hpp__incl.md5  ame___audio_buffer_8hpp_source.html  ame___biquad_8hpp.html  ame___biquad_8hpp__dep__incl.map  ame___biquad_8hpp__dep__incl.md5  ame___biquad_8hpp__incl.map  ame___biquad_8hpp__incl.md5  ame___biquad_8hpp_source.html  ame___circuit_8hpp.html  ame___circuit_8hpp.js  ame___circuit_8hpp__dep__incl.map  ame___circuit_8hpp__dep__incl.md5  ame___circuit_8hpp__incl.map  ame___circuit_8hpp__incl.md5  ame___circuit_8hpp_source.html  ame___conversion_8hpp.html  (+301 more)
.github/workflows/: BumpVersion.yml  DevUnitTest.yml  cmake.yml  (+1 more)
audio/: audioBlockView.hpp  audioBuffer.hpp  biquad.hpp  bpm.hpp  buffer.h  buffer.hpp  conversion.hpp  decibel.h  decibel.hpp  delay.hpp  dspHelpers.h  dspHelpers.hpp  filter.hpp  frequency.hpp  interpolation.hpp  mapping.hpp  pcm.hpp  phase.hpp  q23_float_conversion.h  q23_float_conversion.hpp  random.hpp  semitone.hpp  sine_oscillator.h  sine_oscillator.hpp  slide.hpp  smoothing.hpp  time.hpp  volume.hpp  wavPlayer.hpp  wavReader.hpp  wavetable.hpp
docs/: _2_users_2akiyuki_2_documents_2ame_2_c_m_s_i_s_5_2_c_m_s_i_s_2_d_s_p_2_d_s_p__lib__test_suite_2_4a86d0f191aa4b1e891edb3dda5081d1.html  _a_2_include_2cmsis__armcc_8h_source.html  _a_2_include_2cmsis__armclang_8h.html  _a_2_include_2cmsis__armclang_8h_source.html  _a_2_include_2cmsis__gcc_8h.html  _a_2_include_2cmsis__gcc_8h.js  _a_2_include_2cmsis__gcc_8h_source.html  _a_2_include_2cmsis__iccarm_8h.html  _a_2_include_2cmsis__iccarm_8h.js  _a_2_include_2system___device_8h_source.html  _a_2_source_2system___device_8c.html  _a_2_source_2system___device_8c.js  _a_r_m_2arm__nn__examples_2cifar10_2arm__nnexamples__cifar10__parameter_8h_source.html  _a_r_m_2arm__nn__examples_2cifar10_2arm__nnexamples__cifar10__weights_8h_source.html  _a_r_m_2arm__nn__examples_2gru_2arm__nnexamples__gru__test__data_8h_source.html  _a_r_m___example_t0_8h_source.html  _a_r_m_c_m0plus_8h_source.html  _a_r_m_c_m0plus___m_p_u_8h.html  _a_r_m_c_m0plus___m_p_u_8h.js  _a_r_m_c_m1_8h.html  _a_r_m_c_m1_8h_source.html  _a_r_m_c_m23_8h.html  _a_r_m_c_m23_8h.js  _a_r_m_c_m23_8h_source.html  _a_r_m_c_m35_p_8h_source.html  _a_r_m_c_m35_p___d_s_p___f_p_8h.html  _a_r_m_c_m35_p___d_s_p___f_p_8h_source.html  _a_r_m_c_m35_p___t_z_8h.html  _a_r_m_c_m55_8h.js  _a_r_m_c_r52_2_link_scripts_2_g_c_c_2mem___a_r_m_c_r8_8h_source.html  _a_r_m_c_r52_8h_source.html  _a_r_m_s_c000_8h.html  _a_r_m_s_c000_8h.js  _a_r_m_s_c000_8h_source.html  _a_r_m_s_c300_8h_source.html  _a_r_mv8_m_b_l_8h_source.html  _a_r_mv8_m_m_l_8h.html  _a_r_mv8_m_m_l___d_p_8h.html  _a_r_mv8_m_m_l___d_p_8h_source.html  _a_r_mv8_m_m_l___d_s_p_8h.html  (+3156 more)
i2s/: audioDataConverter.h
include/: ame.hpp  ame_Ambisonics.hpp  ame_AudioBuffer.hpp  ame_Biquad.hpp  ame_Circuit.hpp  ame_Conversion.hpp  ame_DcBlock.hpp  ame_Delay.hpp  ame_Filter.hpp  ame_Math.hpp  ame_Midi.hpp  ame_Oscillator.hpp  ame_Pcm.hpp  ame_Random.hpp  ame_RcLowPass.hpp  ame_Reverb.hpp  ame_String.hpp  ame_Util.hpp  audioBuffer.hpp  delay.hpp  wavReader.hpp
math/: constants.h  constants.hpp  mathFunctions.h  specialFunctions.hpp  table.hpp
midi/: midiHelpers.h  midiHelpers.hpp
resource/: sine440.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+31 more)
system/: bytes.hpp  stringUtilities.hpp  wrap.hpp
test/: sine440.hpp  test.cpp
(+2926 files in other folders)
